--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.4",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "victory": "^35.11.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,6 +25,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.1.0",
     "cypress": "^8.3.1",
+    "cypress-image-snapshot": "^4.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "identity-obj-proxy": "^3.0.0",
