--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@nivo/bar": "^0.73.1",
+    "@nivo/core": "^0.73.0",
+    "@nivo/line": "^0.73.0",
+    "@nivo/pie": "^0.73.0",
+    "@nivo/radar": "^0.73.0",
     "chart.js": "^3.5.1",
     "next": "11.1.2",
     "react": "17.0.2",
