--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
+    "recharts": "^2.1.2",
     "victory": "^35.11.4"
   },
   "devDependencies": {
