--- a/package.json
+++ b/package.json
@@ -16,6 +16,17 @@
     "@nivo/line": "^0.73.0",
     "@nivo/pie": "^0.73.0",
     "@nivo/radar": "^0.73.0",
+    "@visx/axis": "^2.1.0",
+    "@visx/event": "^2.1.0",
+    "@visx/gradient": "^2.1.0",
+    "@visx/grid": "^2.1.0",
+    "@visx/group": "^2.1.0",
+    "@visx/legend": "^2.1.0",
+    "@visx/mock-data": "^2.1.0",
+    "@visx/responsive": "^2.1.0",
+    "@visx/scale": "^2.1.0",
+    "@visx/shape": "^2.1.0",
+    "@visx/tooltip": "^2.1.0",
     "chart.js": "^3.5.1",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -27,6 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/d3-time-format": "^4.0.0",
     "@types/react": "17.0.20",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.1.0",
