--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@visx/scale": "^2.1.0",
     "@visx/shape": "^2.1.0",
     "@visx/tooltip": "^2.1.0",
+    "apexcharts": "^3.28.1",
     "chart.js": "^3.5.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
     "recharts": "^2.1.2",
