--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
+    "react-vis": "^1.11.7",
     "recharts": "^2.1.2",
     "victory": "^35.11.4"
   },
