--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.7",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
     "@nivo/line": "^0.73.0",
@@ -29,6 +32,7 @@
     "@visx/tooltip": "^2.1.0",
     "apexcharts": "^3.28.1",
     "chart.js": "^3.5.1",
+    "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
