--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11",
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
+    "@nivo/heatmap": "^0.74.0",
     "@nivo/line": "^0.73.0",
     "@nivo/pie": "^0.73.0",
     "@nivo/radar": "^0.73.0",
